Fixed hamburger menu issue on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,10 +33,9 @@
         width: 12px;
     }
     #search-form .search-input {
-        padding: 25px 65px 24px 0px;
+        padding: 25px 65px 24px 70px;
         font-size: 17px;
-        left: 70px;
-        width: auto;
+        left: 0;
     }
     .styleguide #content .desc .hero {
         min-height: 300px;
@@ -55,9 +54,10 @@
     #hamburger {
         display: block;
         position: absolute;
-        top: 23px;
-        left: 30px;
-        z-index: 30
+        top: 0;
+        left: 0;
+        padding: 23px 13px 23px 30px;
+        z-index: 30;
     }
     /* Offcanvas */
     .hamburger-open,
